Further refine the codes